# distributedInformationSystems

./: README.md
lab1/: docker-compose.yml  run.sh
lab1/manager/: Dockerfile
lab1/manager/app/: request_state_manager.py
lab2/: docker-compose.yml
lab2/manager/: pyproject.toml
lab2/manager/app/: main.py  schemas.py
lab2/worker/: pyproject.toml
lab2/worker/app/: main.py  schemas.py  utils.py
