[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["kabanpunk <lik42127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
requests = "^2.31.0"
httpx = "^0.27.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
